--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -1,19 +1,60 @@
-#produtos, #carrinho {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
+body{
+	box-sizing: 500px;
 }
 
-.produto, .carrinho-item {
-    margin-bottom: 15px;
+.produto {
+    max-width: 300px;
+    margin: 15px;
 }
 
-.produto img {
-    width: 100px;
-    height: 100px;
+.imagem-descricao {
+    width: 100%;
+    height: 250px;
+}
+
+button {
+    margin-top: 5px;
 }
 
 #carrinho {
+    position: fixed;
+    top: 20px;
+    left: 20px; /* Muda o carrinho para o lado esquerdo */
+    width: 150px;
+    height: 500px; /* Altura fixa do carrinho */
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    padding: 16px;
     background-color: #f9f9f9;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+}
+
+#carrinho-itens {
+    overflow-y: auto;
+    max-height: 250px; /* Altura máxima para os itens do carrinho, para a rolagem */
+    margin-bottom: 10px;
+}
+
+.carrinho-item {
+    border-bottom: 1px solid #ccc;
+    padding: 8px 0;
+}
+
+#total {
+    font-weight: bold;
+}
+
+#carrinho-footer {
+    margin-top: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#carrinho-footer button {
+    width: 100%;
+    margin: 5px 0;
 }
